<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewmodel"
            type="com.liorkerenn.user.myapplication.viewmodel.CountriesActivityViewmodel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.CountriesActivity"
        android:background="@color/Black"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >

                    <Button
                        android:id="@+id/sortByNameAToZ"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/Navy"
                        android:layout_margin="@dimen/margin3"
                        android:textColor="@color/White"
                        android:text="@string/sort_by_name"
                        android:drawableBottom="@android:drawable/arrow_down_float"
                        android:padding="@dimen/margin3"
                        android:onClick="@{viewmodel::onSortClick}"
                        />

                    <Button
                        android:id="@+id/sortByNameZToA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/Navy"
                        android:layout_margin="@dimen/margin3"
                        android:textColor="@color/White"
                        android:text="@string/sort_by_name"
                        android:drawableBottom="@android:drawable/arrow_up_float"
                        android:padding="@dimen/margin3"
                        android:onClick="@{viewmodel::onSortClick}"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >


                    <Button
                        android:id="@+id/sortByAreaLargeToSmall"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/Navy"
                        android:layout_margin="@dimen/margin3"
                        android:textColor="@color/White"
                        android:text="@string/sort_by_area"
                        android:drawableBottom="@android:drawable/arrow_down_float"
                        android:padding="@dimen/margin3"
                        android:onClick="@{viewmodel::onSortClick}"
                        />

                    <Button
                        android:id="@+id/sortByAreaSmalTolLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/Navy"
                        android:layout_margin="@dimen/margin3"
                        android:textColor="@color/White"
                        android:text="@string/sort_by_area"
                        android:drawableBottom="@android:drawable/arrow_up_float"
                        android:padding="@dimen/margin3"
                        android:onClick="@{viewmodel::onSortClick}"
                        />

                </LinearLayout>


            </LinearLayout>

          <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>